--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,11 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "aiohttp>=3.11.0",
     "pyyaml>=6.0.0",
-    "google-auth>=2.0.0",
+    "google-auth[urllib3]>=2.0.0",
     "google-auth-oauthlib>=1.0.0",
     "google-auth-httplib2>=0.2.0",
     "google-api-python-client>=2.100.0",
+    "packaging>=24.0",
     "msal>=1.28.0",
     "msgraph-sdk>=1.0.0",
     "azure-identity>=1.15.0",
